--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -17,6 +17,24 @@
   padding-left: 10px;
 }
 
+.checkbox-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 0;
+}
+
+.checkbox-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.is-custom-checkbox {
+  width: 14px;
+  height: 14px;
+}
+
 .is-custom-tile {
   padding: 0 0 5px 0 !important;
 }
@@ -35,11 +53,6 @@
 
 .test {
   outline: 1px solid blue;
-}
-
-.is-checkbox {
-  width: 12px;
-  height: 12px;
 }
 
 .App-header {
